cloak the chatroom to avoid flicker

--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,8 @@
+/* Angular */
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
 div#chatroom {
   display: block;
   height: 300px;
